--- a/style.css
+++ b/style.css
@@ -1,31 +1,42 @@
 * {
     box-sizing: border-box;
     margin: 0;
-    padding: 0px;
+    padding: 0;
 }
 
 body {
+    /*
     display: flex;
     flex-direction: column;
+    */
     font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     color: #f9faf8;
+}
+
+img {
+    max-width: 55%;
+}
+
+.container {
+    max-width: 1100px;
+    margin: 0 auto;
+    padding: 0 30px;
 }
 
 .navbar {
     background-color: #1f2937;
     color: white;
-    /*display: flex;
-    justify-content: space-between;
-    align-items: center; */
+    height: 50px;
 }
 
-.nav {
+.navbar .container {
     display: flex;
-    justify-content: space-between;
+    justify-content: space-around;
     align-items: center;
+    height: 100%;
 }
 
-.logo {
+.navbar .logo {
     color: #f9faf8;
     font-weight: extra-bold;
     font-size: 24px;
@@ -48,27 +59,59 @@ a:hover {
     color: red;
 }
 
-.title {
-    background-color: black;
+.header {
+    background-color: #1f2937;
+    min-height: 400px;
 }
 
-.container {
-    display: flex;
-    flex-direction: column;
+.header .container {
+    display: flex;  
+    justify-content: space-between;
+    align-items: center; 
 }
 
 button {
     color: white;
     background-color: #3882f6;
-    /*border-radius: ;*/
+    border-radius: 6px;
+    border: none;
+    padding: 8px 25px;
+    font-weight: bold;
+    font-size: 15px;
+    margin-top: 10px;
 }
 
 .main {
     background-color: white;
     color: black;
+    text-align: center;
 }
 
-.quote {
+.main h2 {
+    margin-top: 30px;
+    margin-bottom: 30px;
+}
+
+
+.main .container {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    margin: 0px 100px;
+    margin-bottom: 50px;
+}
+
+.box button {
+    border: solid #3882f6;
+    background-color: white;
+    height: 120px;
+    width: 120px;
+    border-radius: 8px;
+}
+
+/*Figure out how to keep everything centered in page */
+
+.quote .container {
     background-color: #e5e7eB;
     color: #1f2937;
     font-style: italic;
@@ -79,6 +122,33 @@ button {
     align-items: flex-end;
 }
 
+h2 {
+    font-size: 36px;
+    color: #1f2937;
+    text-align: center;
+}
+
+.boxes {
+    display: flex;
+}
+
+.cta {
+    background-color: #3882f6;
+    display: flex;
+    flex-direction: column;
+}
+
+.cta p {
+    font-weight: normal;
+    font-size: 18px;
+}
+
+.footer {
+    background-color: #1f2937; 
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
 
 
 
