--- a/style.css
+++ b/style.css
@@ -11,6 +11,7 @@ body {
     */
     font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     color: #f9faf8;
+    margin: 0 auto;
 }
 
 img {
@@ -31,7 +32,7 @@ img {
 
 .navbar .container {
     display: flex;
-    justify-content: space-around;
+    justify-content: space-between;
     align-items: center;
     height: 100%;
 }
